<package>
    <name>hand_detector</name>
    <version>0.0.0</version>
    <description>
    This package detects the hand with the primesense sensor
    </description>
    <maintainer email="geppert@kth.se">mgeppert</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>libpcl-all-dev</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>libpcl-all</run_depend>

</package>
